2004-06-15 Brent Welch <welch@panasas.com>
        * lib/digest.tcl: Added "package require md5 1"
        * lib/utils.tcl: Removed "package present md5"
          because this messes up any system that loads utils.tcl but
          does not load digest.tcl  The little "md5hex" function
          is local to digest.tcl now.  This is a slightly different
          fix than proposed by Colin, but I'd rather keep inter-package
          dependencies local, so you only need md5 if you need digest.

2004-06-16 Colin McCormack <colin@chinix.com>
	* Fixed problem with virtual hosts and md5 tcllib bugfix.

2004-06-15 Brent Welch <welch@panasas.com>
        * lib/template.tcl: code smithing and bug fixes in new code.

2004-06-15 Colin McCormack <colin@chinix.com>
	* lib/{template,fallback}.tcl: Fixed bugs in .html/.htm substitution
	  and fallback content negotiation

2004-06-14 Brent Welch <welch@panasas.com>
        * lib/digest.tcl: Removed the "ne" operator from expressions
          as that is an 8.5-specific feature.  We have not formally
          given up on Tcl 8.* compatibility

2004-06-14 Colin McCormack <colin@chinix.com>
	* htdoc/htaccess/*: Made /htaccess accept Windows style pathnames
	* lib/{template,fallback,doc}.tcl: fixed Windows difficulty with .html
	  some corner cases - Thanks to GW Lester

2004-06-12 Colin McCormack <colin@chinix.com>
	* htdoc/access/htman.tml - updated documentation
	* lib/auth.tcl: removed obsolete reference to AuthDefaultFile
	* lib/httpd.tcl: added filtering of content through Httpd_ReturnData
	  and Httpd_ReturnCacheableData
	* lib/url.tcl: added -filter option to Url_PrefixInstall,
	  specifying a content filter.
	* htdoc/man/{url,http}.man: updated for filtering changes.
	* lib/{template,doc,fallback}.tcl: reorganised for
	  generalised templates.
	* lib/redirect.tcl: added Redirect_QuerySelf - Redirect_Self
	  preserving query data

2004-06-11 Colin McCormack <colin@chinix.com>