@@ -1,5 +1,5 @@
 package provide httpd::version 3.5
 proc Httpd_Version {} {
     global Httpd
-    set Httpd(version)	"3.5.1 May 27, 2004"
+    set Httpd(version)	"3.5.2 CVS"
 }
